--- a/task-03.html
+++ b/task-03.html
@@ -7,7 +7,7 @@
     <title>Task 3</title>
     <link rel="stylesheet" href="css/common.css" />
     <style>
-      .gallery{
+      /* .gallery{
 display: flex;
 justify-content: space-evenly;
       }
@@ -21,7 +21,7 @@ justify-content: space-evenly;
   max-width: 100%;
   height: 100%;
   margin-right: 20px;
-      }
+      } */
 
     </style>
   </head>
